--- a/TurističkaOrganizacija/TurističkaOrganizacija/TurističkaOrganizacija.csproj
+++ b/TurističkaOrganizacija/TurističkaOrganizacija/TurističkaOrganizacija.csproj
@@ -68,8 +68,12 @@
     <Compile Include="Infrastructure\Repositories\SqlClient\PackageRepositorySql.cs" />
     <Compile Include="Infrastructure\Repositories\SqlClient\ReservationRepositorySql.cs" />
     <Compile Include="Program.cs" />
-    <Compile Include="ReservationForm.cs" />
-    <Compile Include="PackagesForm.cs" />
+    <Compile Include="ReservationForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PackagesForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
