--- a/TurističkaOrganizacija/TurističkaOrganizacija/TurističkaOrganizacija.csproj
+++ b/TurističkaOrganizacija/TurističkaOrganizacija/TurističkaOrganizacija.csproj
@@ -68,9 +68,16 @@
     <Compile Include="Infrastructure\Repositories\SqlClient\PackageRepositorySql.cs" />
     <Compile Include="Infrastructure\Repositories\SqlClient\ReservationRepositorySql.cs" />
     <Compile Include="Program.cs" />
-    <Compile Include="ReservationForm.cs" />
-    <Compile Include="PackagesForm.cs" />
+    <Compile Include="ReservationForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PackagesForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
