--- a/TurističkaOrganizacija/TurističkaOrganizacija/TurističkaOrganizacija.csproj
+++ b/TurističkaOrganizacija/TurističkaOrganizacija/TurističkaOrganizacija.csproj
@@ -62,6 +62,11 @@
     <Compile Include="Application\EventBus.cs" />
     <Compile Include="Application\Validation.cs" />
     <Compile Include="Application\PricingStrategies.cs" />
+    <Compile Include="Application\PackageFactory.cs" />
+    <Compile Include="Application\Commands\CommandPattern.cs" />
+    <Compile Include="Application\Facade\TouristAgencyFacade.cs" />
+    <Compile Include="Application\TemplateMethod\PackageProcessor.cs" />
+    <Compile Include="Infrastructure\Adapters\DatabaseAdapter.cs" />
     <Compile Include="Infrastructure\Security\SecurityService.cs" />
     <Compile Include="Infrastructure\Backup\BackupService.cs" />
     <Compile Include="Infrastructure\Repositories\SqlClient\ClientRepositorySql.cs" />
