Revert "Merge branch 'ivana' of https://github.com/sandu-01/DS-Turisticka-organizacija into ivana"
This reverts commit 765d733f3039b6c022034a7f73b7826748397ba9, reversing
changes made to 4a552345ed5e68e7dfc4bdeea15f2be7b66a1b27.

--- a/TurističkaOrganizacija/TurističkaOrganizacija/TurističkaOrganizacija.csproj
+++ b/TurističkaOrganizacija/TurističkaOrganizacija/TurističkaOrganizacija.csproj
@@ -79,8 +79,9 @@
     <Compile Include="Application\Validation.cs" />
     <Compile Include="Application\PricingStrategies.cs" />
     <Compile Include="Application\PackageFactory.cs" />
+    <Compile Include="Application\Commands\CommandPattern.cs" />
     <Compile Include="Application\Facade\TouristAgencyFacade.cs" />
-    
+    <Compile Include="Application\TemplateMethod\PackageProcessor.cs" />
     <Compile Include="Infrastructure\Adapters\DatabaseAdapter.cs" />
     <Compile Include="Infrastructure\Security\SecurityService.cs" />
     <Compile Include="Infrastructure\Backup\BackupService.cs" />
